# Trabalho-Individual-2022-2-

./: Dockerfile  dconfig  dconfig.bak  docker-compose.yml
.github/workflows/: ci.yml
gces-arthur/: pyproject.toml
gces-poetry/: pyproject.toml
gces-poetry/tests/: test_gces_poetry.py
html/: md_CODE_OF_CONDUCT.html  md_CONTRIBUTING.html  md_README.html  pages.html
latex/: refman.tex
source/: conf.py
xml/: Doxyfile.xml  index.xml  md_CODE_OF_CONDUCT.xml  md_CONTRIBUTING.xml  md_README.xml
