[tool.poetry]
name = "gces-arthur"
version = "0.1.0"
description = ""
authors = ["art1505 arthurtalles@yahoo.com.br"]
readme = "README.md"
packages = [{include = "gces_arthur"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
