[tool.poetry]
name = "gces-poetry"
version = "0.1.0"
description = ""
authors = ["art1505 arthurtalles@yahoo.com.br"]
packages = [{include = "gces-poetry"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
